--- a/england.html
+++ b/england.html
@@ -17,6 +17,7 @@
             background-clip: text;
             color:transparent;
             background-image: url(en.png);
+            background-size: cover;
             }
             .img{
                 height: 400px;
