--- a/finland.html
+++ b/finland.html
@@ -16,6 +16,7 @@
             color: transparent;
             background-clip: text;
             background-image: url(fin.png);
+            background-size: cover;
         }
        .img{
         height: 600px;
