--- a/japan.html
+++ b/japan.html
@@ -15,6 +15,7 @@
             background-clip: text;
             color: transparent;
             background-image: url(ooo.png);
+            background-size: cover;
         }
         .img{
             height: 550px;
