--- a/spain.html
+++ b/spain.html
@@ -16,6 +16,7 @@
             font-family: Arial, Helvetica, sans-serif;
             color: transparent;
             background-image: url(sss.png);
+            background-size: cover;
         }
         .img{
             height: 600px;
